@@ -1,37 +1,34 @@
 package it.pagopa.pn.stream.service.impl;
 
 import it.pagopa.pn.stream.config.PnStreamConfigs;
-import it.pagopa.pn.stream.dto.timeline.TimelineElementInternal;
-import it.pagopa.pn.stream.dto.timeline.details.TimelineElementCategoryInt;
 import it.pagopa.pn.stream.exceptions.PnStreamForbiddenException;
 import it.pagopa.pn.stream.exceptions.PnStreamMaxStreamsCountReachedException;
-import it.pagopa.pn.stream.generated.openapi.server.webhook.v1.dto.StreamCreationRequestV25;
-import it.pagopa.pn.stream.generated.openapi.server.webhook.v1.dto.StreamListElement;
-import it.pagopa.pn.stream.generated.openapi.server.webhook.v1.dto.StreamMetadataResponseV25;
-import it.pagopa.pn.stream.generated.openapi.server.webhook.v1.dto.StreamRequestV25;
-import it.pagopa.pn.stream.middleware.dao.webhook.StreamEntityDao;
-import it.pagopa.pn.stream.middleware.dao.webhook.dynamo.entity.StreamEntity;
-import it.pagopa.pn.stream.middleware.dao.webhook.dynamo.mapper.DtoToEntityStreamMapper;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamCreationRequestV26;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamListElement;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamMetadataResponseV26;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamRequestV26;
+import it.pagopa.pn.stream.middleware.dao.dynamo.EventEntityDao;
+import it.pagopa.pn.stream.middleware.dao.dynamo.StreamEntityDao;
+import it.pagopa.pn.stream.middleware.dao.dynamo.entity.StreamEntity;
+import it.pagopa.pn.stream.middleware.dao.dynamo.mapper.DtoToEntityStreamMapper;
 import it.pagopa.pn.stream.middleware.externalclient.pnclient.externalregistry.PnExternalRegistryClient;
 import it.pagopa.pn.stream.service.SchedulerService;
-import it.pagopa.pn.stream.service.StreamsService;
-
+import it.pagopa.pn.stream.service.utils.StreamUtils;
 import org.junit.Assert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.util.function.Tuples;
 
 import java.time.Duration;
 import java.time.Instant;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.*;
 
 class StreamsServiceImplTest {
     Duration d = Duration.ofMillis(3000);
@@ -39,36 +36,34 @@ class StreamsServiceImplTest {
     private StreamEntityDao streamEntityDao;
     private PnStreamConfigs pnStreamConfigs;
     private SchedulerService schedulerService;
-    private StreamsService webhookService;
+    private StreamsServiceImpl webhookService;
     private PnExternalRegistryClient pnExternalRegistryClient;
 
-    private final int MAX_STREAMS = 5;
+    private final int maxStreams = 5;
 
     @BeforeEach
     void setup() {
         streamEntityDao = Mockito.mock( StreamEntityDao.class );
+        Mockito.mock( EventEntityDao.class );
         pnStreamConfigs = Mockito.mock( PnStreamConfigs.class );
         schedulerService = Mockito.mock(SchedulerService.class);
+        Mockito.mock(StreamUtils.class);
         pnExternalRegistryClient = Mockito.mock(PnExternalRegistryClient.class);
 
-        MockitoAnnotations.initMocks(this);
-
-        PnStreamConfigs.Webhook webhook = new PnStreamConfigs.Webhook();
-        webhook.setScheduleInterval(1000L);
-        webhook.setMaxLength(10);
-        webhook.setPurgeDeletionWaittime(1000);
-        webhook.setReadBufferDelay(1000);
-        webhook.setMaxStreams(MAX_STREAMS);
-        webhook.setTtl(Duration.ofDays(30));
-        webhook.setFirstVersion("v10");
-        webhook.setCurrentVersion("v23");
-        webhook.setDeltaCounter(1000);
-        Mockito.when(pnStreamConfigs.getWebhook()).thenReturn(webhook);
+        when(pnStreamConfigs.getScheduleInterval()).thenReturn(1000L);
+        when(pnStreamConfigs.getMaxLength()).thenReturn(10);
+        when(pnStreamConfigs.getPurgeDeletionWaittime()).thenReturn(1000);
+        when(pnStreamConfigs.getReadBufferDelay()).thenReturn(1000);
+        when(pnStreamConfigs.getTtl()).thenReturn(Duration.ofDays(30));
+        when(pnStreamConfigs.getFirstVersion()).thenReturn("v10");
+        when(pnStreamConfigs.getMaxStreams()).thenReturn(maxStreams);
+        when(pnStreamConfigs.getCurrentVersion()).thenReturn("v26");
+        when(pnStreamConfigs.getDeltaCounter()).thenReturn(1000);
 
         webhookService = new StreamsServiceImpl(streamEntityDao, schedulerService, pnStreamConfigs
             ,pnExternalRegistryClient);
 
-        DtoToEntityStreamMapper mapper = new DtoToEntityStreamMapper(pnStreamConfigs);
+        new DtoToEntityStreamMapper(pnStreamConfigs);
     }
 
     @Test
@@ -78,9 +73,9 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
 
-        StreamCreationRequestV25 req = new StreamCreationRequestV25();
+        StreamCreationRequestV26 req = new StreamCreationRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -106,7 +101,7 @@ class StreamsServiceImplTest {
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -121,9 +116,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamCreationRequestV25 req = new StreamCreationRequestV25();
+        StreamCreationRequestV26 req = new StreamCreationRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -136,7 +131,7 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
 
         List<StreamEntity> sss = new ArrayList<>();
-        for(int i = 0;i<MAX_STREAMS;i++) {
+        for(int i = 0; i< maxStreams; i++) {
             StreamEntity pentity = new StreamEntity();
             pentity.setStreamId(UUID.randomUUID().toString());
             pentity.setTitle(req.getTitle());
@@ -151,7 +146,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.save(Mockito.any())).thenReturn(Mono.just(entity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
         assertThrows(PnStreamMaxStreamsCountReachedException.class, () -> mono.block(d));
 
         //THEN
@@ -163,9 +158,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamCreationRequestV25 req = new StreamCreationRequestV25();
+        StreamCreationRequestV26 req = new StreamCreationRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         String uuid = UUID.randomUUID().toString();
@@ -178,7 +173,7 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
 
         List<StreamEntity> sss = new ArrayList<>();
-        for(int i = 0;i<MAX_STREAMS;i++) {
+        for(int i = 0; i< maxStreams; i++) {
             StreamEntity pentity = new StreamEntity();
             pentity.setStreamId(UUID.randomUUID().toString());
             pentity.setTitle(req.getTitle());
@@ -194,7 +189,7 @@ class StreamsServiceImplTest {
         Mockito.when(streamEntityDao.save(Mockito.any())).thenReturn(Mono.just(entity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.createEventStream(xpagopapnuid, xpagopacxid,null,null, Mono.just(req));
         assertDoesNotThrow(() -> mono.block(d));
 
         //THEN
@@ -207,13 +202,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo1"));
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo1"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -227,13 +222,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.EMPTY_LIST);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.emptyList());
 
-        Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.EMPTY_LIST);
+        Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
 
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -245,13 +240,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.EMPTY_LIST);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.emptyList());
 
-        Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.EMPTY_LIST);
+        Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
 
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.EMPTY_LIST,null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),null, Mono.just(req));
 
         //THEN
         assertDoesNotThrow(() -> res.block(d));
@@ -263,13 +258,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.EMPTY_LIST);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.emptyList());
 
-        Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.EMPTY_LIST);
+        Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.emptyList());
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -283,13 +278,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
+        StreamCreationRequestV26 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -303,13 +298,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2", "gruppo3", "gruppo4"));
+        StreamCreationRequestV26 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2", "gruppo3", "gruppo4"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
 
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -320,7 +315,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
@@ -333,13 +328,15 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamRequestV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
+
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),"v10", Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -354,27 +351,29 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
         replacedEntity.setPaId(xpagopacxid);
-        replacedEntity.setVersion("v23");
+        replacedEntity.setVersion("v26");
         replacedEntity.setEventAtomicCounter(3L);
         replacedEntity.setGroups(Collections.singletonList("gruppo1"));
 
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamRequestV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
+
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -389,7 +388,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
@@ -402,13 +401,15 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
+
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -422,25 +423,25 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
         replacedEntity.setPaId(xpagopacxid);
         replacedEntity.setVersion("v23");
-        replacedEntity.setGroups(Collections.EMPTY_LIST);
+        replacedEntity.setGroups(Collections.emptyList());
         replacedEntity.setEventAtomicCounter(1L);
 
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamRequestV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
-        Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo2"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo2"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -453,7 +454,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -463,13 +464,13 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -482,7 +483,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo2"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -492,14 +493,14 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
         Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Collections.singletonList("gruppo1"));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -513,7 +514,7 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
 
         UUID replacedStreamId = UUID.randomUUID();
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.singletonList("gruppo1"), replacedStreamId);
 
         StreamEntity replacedEntity = new StreamEntity();
         replacedEntity.setStreamId(replacedStreamId.toString());
@@ -524,13 +525,13 @@ class StreamsServiceImplTest {
         StreamEntity newEntity = new StreamEntity();
         newEntity.setPaId(xpagopacxid);
         newEntity.setStreamId(UUID.randomUUID().toString());
-        newEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        newEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
 
-        Mockito.when(streamEntityDao.get(Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(replacedEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(replacedEntity, Optional.empty())));
         Mockito.when(streamEntityDao.replaceEntity(Mockito.any(), Mockito.any() )).thenReturn(Mono.just(newEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Collections.singletonList("gruppo1"),null, Mono.just(req));
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
@@ -542,13 +543,13 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
+        StreamCreationRequestV26 req = createEventStreamRequest(Arrays.asList("gruppo1", "gruppo2"));
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, null,null, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -556,7 +557,7 @@ class StreamsServiceImplTest {
         ArgumentCaptor<StreamEntity> argument = ArgumentCaptor.forClass(StreamEntity.class);
         Mockito.verify(streamEntityDao).save(argument.capture());
 
-        Assert.assertEquals(pnStreamConfigs.getWebhook().getCurrentVersion(), argument.getValue().getVersion());
+        assertEquals(pnStreamConfigs.getCurrentVersion(), argument.getValue().getVersion());
     }
 
     @Test
@@ -566,13 +567,13 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
         String xPagopaPnApiVersion = "v10";
 
-        StreamCreationRequestV25 req = createEventStreamRequest(Collections.EMPTY_LIST);
+        StreamCreationRequestV26 req = createEventStreamRequest(Collections.emptyList());
 
         Mockito.when(pnExternalRegistryClient.getGroups(xpagopapnuid, xpagopacxid)).thenReturn(Arrays.asList("gruppo1", "gruppo2","gruppo3"));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, Arrays.asList("gruppo1"),xPagopaPnApiVersion, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.createEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),xPagopaPnApiVersion, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -580,21 +581,20 @@ class StreamsServiceImplTest {
         ArgumentCaptor<StreamEntity> argument = ArgumentCaptor.forClass(StreamEntity.class);
         Mockito.verify(streamEntityDao).save(argument.capture());
 
-        Assert.assertEquals(xPagopaPnApiVersion, argument.getValue().getVersion());
+        assertEquals(xPagopaPnApiVersion, argument.getValue().getVersion());
     }
 
-    private StreamCreationRequestV25 createEventStreamRequest(List<String> requestGroups) {
+    private StreamCreationRequestV26 createEventStreamRequest(List<String> requestGroups) {
         return createEventStreamRequest(requestGroups, null);
     }
-    private StreamCreationRequestV25 createEventStreamRequest(List<String> requestGroups, UUID replacedStreamId) {
+    private StreamCreationRequestV26 createEventStreamRequest(List<String> requestGroups, UUID replacedStreamId) {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
-        String xpagopapnuid = "PA-xpagopapnuid";
 
 
-        StreamCreationRequestV25 req = new StreamCreationRequestV25();
+        StreamCreationRequestV26 req = new StreamCreationRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamCreationRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(requestGroups);
         req.setReplacedStreamId(replacedStreamId);
@@ -633,14 +633,14 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
-        disabledEntity.setVersion("v23");
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
+        disabledEntity.setVersion("v26");
 
-        Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        Mockito.when(streamEntityDao.getWithRetryAfter(Mockito.any(), Mockito.any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
         res.block(d);
         //THEN
         Mockito.verify(streamEntityDao).disable(Mockito.any());
@@ -656,15 +656,17 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
-        disabledEntity.setGroups(Collections.EMPTY_LIST);
+        disabledEntity.setGroups(Collections.emptyList());
 
         Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
+
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1"),null, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, toBeDisabledStreamId);
         //THEN
         Assert.assertThrows(PnStreamForbiddenException.class, ()->res.block(d));
         Mockito.verify(streamEntityDao, never()).disable(Mockito.any());
@@ -681,15 +683,15 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setDisabledDate(Instant.now());
 
-        Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,null, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -706,15 +708,15 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v10");
         disabledEntity.setDisabledDate(Instant.now());
 
-        Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,null,xPagopaPnApiVersion, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -731,16 +733,16 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setDisabledDate(Instant.now());
         disabledEntity.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
-        Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        when(streamEntityDao.getWithRetryAfter(xpagopacxid, toBeDisabledStreamId.toString())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo3"),xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo3"),xPagopaPnApiVersion, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -756,15 +758,17 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamRequestV25.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
         Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
+
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
         res.block(d);
         //THEN
         Mockito.verify(streamEntityDao).disable(Mockito.any());
@@ -782,15 +786,17 @@ class StreamsServiceImplTest {
         StreamEntity disabledEntity = new StreamEntity();
         disabledEntity.setPaId(xpagopacxid);
         disabledEntity.setStreamId(toBeDisabledStreamId.toString());
-        disabledEntity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.name());
+        disabledEntity.setEventType(StreamCreationRequestV26.EventTypeEnum.STATUS.name());
         disabledEntity.setVersion("v23");
         disabledEntity.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
         Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(disabledEntity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(disabledEntity, Optional.empty())));
+
         Mockito.when(streamEntityDao.disable(Mockito.any())).thenReturn(Mono.just(disabledEntity));
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
+        Mono<StreamMetadataResponseV26> res = webhookService.disableEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo2"),xPagopaPnApiVersion, toBeDisabledStreamId);
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
     }
@@ -814,8 +820,9 @@ class StreamsServiceImplTest {
         entity.setVersion("v10");
 
         Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+        Mockito.when(streamEntityDao.getWithRetryAfter(xpagopacxid,uuid)).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
         //WHEN
         webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, null,"v10",uuidd).block(d);
@@ -843,11 +850,13 @@ class StreamsServiceImplTest {
         entity.setVersion("v10");
 
         Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
         //WHEN
-        webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, Arrays.asList("gruppo1"),"v10",uuidd).block(d);
+        webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),"v10",uuidd).block(d);
 
         //THEN
         Mockito.verify(streamEntityDao).delete(xpagopacxid, uuid);
@@ -869,11 +878,13 @@ class StreamsServiceImplTest {
         entity.setEventType("");
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
+        entity.setVersion("v26");
 
         Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
         //WHEN
         webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, null,null,uuidd).block(d);
@@ -898,12 +909,12 @@ class StreamsServiceImplTest {
         entity.setEventType("");
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
+        entity.setVersion("v26");
         entity.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
-        Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
         //WHEN
         webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, null,null,uuidd).block(d);
@@ -932,11 +943,14 @@ class StreamsServiceImplTest {
         entity.setGroups(Collections.emptyList());
 
         Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+
+        Mockito.when(streamEntityDao.getWithRetryAfter(xpagopacxid,uuid)).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
         //WHEN
-        Mono mono = webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, Arrays.asList("gruppo1"),null,uuidd);
+        var mono = webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null,uuidd);
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
@@ -966,9 +980,11 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setVersion(entityVersion);
 
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+
         Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
 
         //WHEN
@@ -998,16 +1014,15 @@ class StreamsServiceImplTest {
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion(entityVersion);
-        entity.setGroups(Arrays.asList("gruppo1"));
+        entity.setGroups(List.of("gruppo1"));
 
-        Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.delete(xpagopacxid, uuid)).thenReturn(Mono.empty());
-        Mockito.doNothing().when(schedulerService).scheduleWebhookEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
+        Mockito.doNothing().when(schedulerService).scheduleStreamEvent(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any());
 
 
         //WHEN
-        var mono = webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, Collections.EMPTY_LIST,xPagopaPnApiVersion,uuidd);
-//        assertThrows(PnWebhookForbiddenException.class, () -> mono.block(d));
+        var mono = webhookService.deleteEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),xPagopaPnApiVersion,uuidd);
         mono.block(d);
 
         //THEN
@@ -1019,9 +1034,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1035,11 +1050,11 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1051,9 +1066,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1067,10 +1082,10 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
         entity.setGroups(Collections.emptyList());
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1082,9 +1097,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1097,12 +1112,12 @@ class StreamsServiceImplTest {
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setGroups(Collections.emptyList());
-        entity.setVersion("v23");
+        entity.setVersion("v26");
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.EMPTY_LIST,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1114,11 +1129,11 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
-        req.setGroups(Arrays.asList("gruppo1"));
+        req.setGroups(List.of("gruppo1"));
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1133,10 +1148,10 @@ class StreamsServiceImplTest {
         entity.setVersion("v23");
 
         Mockito.when(pnExternalRegistryClient.getGroups(Mockito.anyString(), Mockito.anyString())).thenReturn(Arrays.asList("gruppo1","gruppo2"));
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.EMPTY_LIST,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1149,9 +1164,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
@@ -1164,14 +1179,14 @@ class StreamsServiceImplTest {
         entity.setEventType(req.getEventType().toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setGroups(Arrays.asList("gruppo1"));
-        entity.setVersion("v23");
+        entity.setGroups(List.of("gruppo1"));
+        entity.setVersion("v26");
 
         Mockito.when(pnExternalRegistryClient.getGroups(Mockito.anyString(), Mockito.anyString())).thenReturn(Arrays.asList("gruppo1","gruppo2"));
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.EMPTY_LIST,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1184,11 +1199,11 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
-        req.setGroups(Arrays.asList("gruppo2"));
+        req.setGroups(List.of("gruppo2"));
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1199,14 +1214,14 @@ class StreamsServiceImplTest {
         entity.setEventType(req.getEventType().toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setGroups(Arrays.asList("gruppo1"));
+        entity.setGroups(List.of("gruppo1"));
         entity.setVersion("v23");
 
         Mockito.when(pnExternalRegistryClient.getGroups(Mockito.anyString(), Mockito.anyString())).thenReturn(Arrays.asList("gruppo1","gruppo2"));
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.EMPTY_LIST,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd, Mono.just(req));
         assertThrows( PnStreamForbiddenException.class,() -> mono.block(d));
 
         //THEN
@@ -1219,9 +1234,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
@@ -1234,13 +1249,13 @@ class StreamsServiceImplTest {
         entity.setEventType(req.getEventType().toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setGroups(Arrays.asList("gruppo1"));
-        entity.setVersion("v23");
+        entity.setGroups(List.of("gruppo1"));
+        entity.setVersion("v26");
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
         assertDoesNotThrow( () -> mono.block(d));
 
         //THEN
@@ -1252,11 +1267,11 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
-        req.setGroups(Arrays.asList("gruppo1"));
+        req.setGroups(List.of("gruppo1"));
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1270,10 +1285,10 @@ class StreamsServiceImplTest {
         entity.setGroups(Arrays.asList("gruppo1","gruppo2"));
         entity.setVersion("v23");
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Arrays.asList("gruppo1","gruppo2"),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
 
         //THEN
@@ -1294,17 +1309,18 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
+        entity.setVersion("v26");
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+        when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
+        StreamMetadataResponseV26 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1323,20 +1339,21 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
+        entity.setVersion("v26");
         entity.setGroups(new ArrayList<>());
 
+        Mockito.when(streamEntityDao.get(Mockito.any(), Mockito.any())).thenReturn(Mono.just(entity));
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
 
 
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV25> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV26> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> mono.block(d));
@@ -1354,18 +1371,19 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
+        entity.setVersion("v26");
         entity.setGroups(new ArrayList<>());
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+        when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
 
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV25> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV26> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> mono.block(d));
@@ -1384,18 +1402,19 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v10");
-        entity.setGroups(Arrays.asList("gruppo1"));
+        entity.setGroups(List.of("gruppo1"));
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+        when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
 
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV25> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV26> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertThrows(PnStreamForbiddenException.class, () -> mono.block(d));
@@ -1414,18 +1433,19 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
-        entity.setGroups(Arrays.asList("gruppo2"));
+        entity.setVersion("v26");
+        entity.setGroups(List.of("gruppo2"));
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+        when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
 
         List<String> reqGroups = new ArrayList<>();
         reqGroups.add("gruppo1");
         //WHEN
-        Mono<StreamMetadataResponseV25> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
+        Mono<StreamMetadataResponseV26> mono = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> mono.block(d));
@@ -1445,18 +1465,19 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setVersion("v23");
-        entity.setGroups(Arrays.asList("gruppo1"));
+        entity.setVersion("v26");
+        entity.setGroups(List.of("gruppo1"));
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
+        when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
 
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd);
+        Mono<StreamMetadataResponseV26> res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,Collections.emptyList(),null, uuidd);
 
         //THEN
         assertDoesNotThrow(() -> res.block(d));
@@ -1475,18 +1496,18 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setGroups(Arrays.asList(new String[]{"gruppo1","gruppo2"}));
-        entity.setVersion("v23");
+        entity.setGroups(Arrays.asList("gruppo1","gruppo2"));
+        entity.setVersion("v26");
 
-
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        Mockito.when(streamEntityDao.get(xpagopacxid,uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
+        StreamMetadataResponseV26 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,null,null, uuidd).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1505,7 +1526,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(uuid);
         entity.setTitle("1");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.STATUS.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.STATUS.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
 
@@ -1513,7 +1534,7 @@ class StreamsServiceImplTest {
         entity.setStreamId(UUID.randomUUID().toString());
         entity.setTitle("2");
         entity.setPaId(xpagopacxid);
-        entity.setEventType(StreamMetadataResponseV25.EventTypeEnum.TIMELINE.toString());
+        entity.setEventType(StreamMetadataResponseV26.EventTypeEnum.TIMELINE.toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
 
@@ -1539,9 +1560,9 @@ class StreamsServiceImplTest {
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
         req.setGroups(Collections.emptyList());
 
@@ -1555,15 +1576,15 @@ class StreamsServiceImplTest {
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
         entity.setVersion("v10");
-        entity.setGroups(Collections.EMPTY_LIST);
+        entity.setGroups(Collections.emptyList());
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, Arrays.asList("gruppo1"),"v10", uuidd, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),"v10", uuidd, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1577,16 +1598,16 @@ class StreamsServiceImplTest {
     }
     @Test
     void updateEventStreamDefault() {
-        updateEventStream(null,"v23");
+        updateEventStream(null,"v26");
     }
     void updateEventStream(String xPagopaPnApiVersion, String entityVersion) {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
 
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1601,12 +1622,12 @@ class StreamsServiceImplTest {
         entity.setVersion(entityVersion);
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
         //WHEN
-        StreamMetadataResponseV25 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, null,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, null,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1622,11 +1643,11 @@ class StreamsServiceImplTest {
         String xpagopapnuid = "PA-xpagopapnuid";
         String xPagopaPnApiVersion="v23";
         String entityVersion="v23";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(Arrays.asList("CCCC","DDDD"));
-        req.setGroups(Arrays.asList(new String[]{"gruppo1","gruppo2"}));
+        req.setGroups(Arrays.asList("gruppo1","gruppo2"));
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1637,18 +1658,18 @@ class StreamsServiceImplTest {
         entity.setEventType(req.getEventType().toString());
         entity.setActivationDate(Instant.now());
         entity.setVersion(entityVersion);
-        entity.setGroups(Arrays.asList(new String[]{"gruppo1","gruppo2"}));
-        entity.setFilterValues(new HashSet(Arrays.asList("AAAA","BBBB")));
+        entity.setGroups(Arrays.asList("gruppo1","gruppo2"));
+        entity.setFilterValues(new HashSet<>(Arrays.asList("AAAA","BBBB")));
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
         Mockito.when(pnExternalRegistryClient.getGroups(Mockito.anyString(), Mockito.anyString())).thenReturn(Arrays.asList("gruppo1","gruppo2"));
 
 
         //WHEN
         List<String> requestGroups = Collections.emptyList();
-        StreamMetadataResponseV25 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, requestGroups,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
+        StreamMetadataResponseV26 res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, requestGroups,xPagopaPnApiVersion, uuidd, Mono.just(req)).block(d);
 
         //THEN
         assertNotNull(res);
@@ -1660,9 +1681,9 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
 
         UUID uuidd = UUID.randomUUID();
@@ -1676,12 +1697,12 @@ class StreamsServiceImplTest {
         entity.setActivationDate(Instant.now());
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, Collections.EMPTY_LIST,null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, Collections.emptyList(),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
         //THEN
         assertNotNull(res);
@@ -1693,11 +1714,11 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo nuovo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
-        req.setGroups(Collections.EMPTY_LIST);
+        req.setGroups(Collections.emptyList());
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1708,48 +1729,19 @@ class StreamsServiceImplTest {
         entity.setEventType(req.getEventType().toString());
         entity.setFilterValues(new HashSet<>());
         entity.setActivationDate(Instant.now());
-        entity.setGroups(Collections.EMPTY_LIST);
+        entity.setGroups(Collections.emptyList());
         entity.setVersion("v23");
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
         //WHEN
-        Mono<StreamMetadataResponseV25> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, Arrays.asList("gruppo1"),null, uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> res = webhookService.updateEventStream(xpagopapnuid,xpagopacxid, List.of("gruppo1"),null, uuidd, Mono.just(req));
         assertThrows(PnStreamForbiddenException.class, () -> res.block(d));
         //THEN
         assertNotNull(res);
 
-    }
-
-    private List<TimelineElementInternal> generateTimeline(String iun, String paId){
-        List<TimelineElementInternal> res = new ArrayList<>();
-        Instant t0 = Instant.now();
-
-        res.add(TimelineElementInternal.builder()
-            .category(TimelineElementCategoryInt.REQUEST_ACCEPTED)
-            .iun(iun)
-            .elementId(iun + "_" + TimelineElementCategoryInt.REQUEST_ACCEPTED )
-            .timestamp(t0)
-            .paId(paId)
-            .build());
-        res.add(TimelineElementInternal.builder()
-            .category(TimelineElementCategoryInt.AAR_GENERATION)
-            .iun(iun)
-            .elementId(iun + "_" + TimelineElementCategoryInt.AAR_GENERATION )
-            .timestamp(t0.plusMillis(1000))
-            .paId(paId)
-            .build());
-        res.add(TimelineElementInternal.builder()
-            .category(TimelineElementCategoryInt.SEND_DIGITAL_DOMICILE)
-            .iun(iun)
-            .elementId(iun + "_" + TimelineElementCategoryInt.SEND_DIGITAL_DOMICILE )
-            .timestamp(t0.plusMillis(1000))
-            .paId(paId)
-            .build());
-
-        return res;
     }
 
     @Test
@@ -1757,11 +1749,11 @@ class StreamsServiceImplTest {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
         String xpagopapnuid = "PA-xpagopapnuid";
-        StreamRequestV25 req = new StreamRequestV25();
+        StreamRequestV26 req = new StreamRequestV26();
         req.setTitle("titolo");
-        req.setEventType(StreamRequestV25.EventTypeEnum.STATUS);
+        req.setEventType(StreamRequestV26.EventTypeEnum.STATUS);
         req.setFilterValues(null);
-        req.setGroups(Collections.EMPTY_LIST);
+        req.setGroups(Collections.emptyList());
 
         UUID uuidd = UUID.randomUUID();
         String uuid = uuidd.toString();
@@ -1776,11 +1768,11 @@ class StreamsServiceImplTest {
         entity.setVersion(null);
 
 
-        Mockito.when(streamEntityDao.get(xpagopacxid, uuid)).thenReturn(Mono.just(entity));
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(entity, Optional.empty())));
         Mockito.when(streamEntityDao.update(Mockito.any())).thenReturn(Mono.just(entity));
 
 
-        Mono<StreamMetadataResponseV25> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.singletonList("gruppo1"),"v10", uuidd, Mono.just(req));
+        Mono<StreamMetadataResponseV26> mono = webhookService.updateEventStream(xpagopapnuid,xpagopacxid,Collections.singletonList("gruppo1"),"v10", uuidd, Mono.just(req));
         assertDoesNotThrow(() -> mono.block(d));
 
         //THEN
